--- a/CSS.css
+++ b/CSS.css
@@ -1,92 +1,67 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 :root {
-	--color-name-white: hsl(0, 0%, 80%);
-	--color-name-black: hsl(0, 0%, 10%);
-	--color-message: hsl(0, 0%, 100%);
-	--color-message-background: hsla(0, 0%, 0%, .4);
-	--font-message-size: 1.25rem;
+    --color-name-white: hsl(0, 0%, 80%);
+    --color-name-black: hsl(0, 0%, 10%);
+    --color-message: hsl(0, 0%, 100%);
+    --color-message-background: hsla(0, 0%, 0%, .4);
+    --font-message-size: 1.25rem;
 }
 
-html, body, div, span, header {
-	display: flex;
+.hidden {
+    filter: blur(5px);
 }
-html, body {
-    height: 100%;
-}
+
 body {
-	margin: 0;
-	flex-direction: column;
+    margin: 0;
 }
+
+* {
+    font-family: "Varela Round";
+    box-sizing: border-box;
+}
+
 #log {
-	flex-direction: column;
-	width: 100%;
-	height: 100%;
-	justify-content: flex-end;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    overflow: hidden;
+    justify-content: flex-end;
 }
-#log .emote {
-	margin-right: .3rem;
+
+#log .frame {
+    border: 0.3em solid;
+    border-radius: 1em;
+
+    margin: 1em 0 0 0;
 }
-#log .emote img {
-	opacity: 0;
+#log .frame header {
+    display: flex;
+    margin-left: 5%;
+    transform: translate(0, calc(-50% - 0.15em));
 }
-.badge {
-	width: 1.5rem;
-	height: 1.5rem;
-	border-radius: 8px;
-	margin-left: .2rem;
+#log .frame header .user {
+    display: flex;
+    border-radius: 999em;
+    padding: 0.2em 0.8em;
+    font-size: 0.85em;
+    color: hsl(0, 0%, 90%);
 }
-.frame {
-	flex-direction: column;
-	width: 100%;
-	height: auto;
-	margin-top: -1rem;
-	margin-bottom: .75rem;
+
+#log .frame .message {
+    display: flex;
+    transform: translate(0, -0.5em);
+    margin: 0 0.5em;
+    word-wrap: break-word;
 }
-header {
-	transform: translateY(1rem);
-	flex-direction: row;
-	justify-content: space-between;
-	width: 100%;
+
+#log .frame.next {
+    margin-top: 0.3em;
 }
-header .user {
-	font-weight: bold;
-	border-radius: 1rem;
-	padding: .25rem .75rem;
-	font-family: 'Varela Round';
-	align-items: center;
-	color: var(--color-name-white);
-	margin-left: 3%;
-	font-size: 1.1rem;
+#log .frame.next > header {
+    display: none;
+
 }
-header .badges {
-	margin-right: 5%;
-	align-items: center;
-}
-.message {
-	font-family: 'Varela Round';
-	color: var(--color-message);
-	font-size: var(--font-message-size);
-	word-break: break-word;
-	flex-wrap: wrap;
-	padding: 1.3rem .5rem .2rem .5rem;
-	border-radius: .75rem;
-	background-color: var(--color-message-background);
-}
-#custom_html {
-  height: 100%;
-}
-.next {
-	margin-top: -.5rem;
-}
-.next > header {
-	display: none;
-}
-.next > .message {
-	padding-top: .2rem;
-}
-.dark {
-	color: var(--color-name-black)!important;
-}
-.deleted {
-	filter: blur(5px);
+#log .frame.next > .message {
+    transform: translate(0, 0);
+    margin: 0.3em 0.8em;
 }
